classDiagram
    direction LR

    class User {
        +int id
        +string name
        +string email
        +string password
    }

    class Player {
        +int id
        +string image
        +string name
        +int score
    }

    class Team {
        +int id
        +string name
    }

    %% Relations
    User "1" -- "0..*" Player : crée
    User "1" -- "0..*" Team : crée
    Player "0..*" -- "0..*" Team : appartient à
